...
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mE7-sk-U2l">
                                        <rect key="frame" x="0.0" y="158.5" width="334" height="78"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xiz-fG-J1R" userLabel="startScreenEmailField">
                                                <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eL8-zB-PfS">
                                                <rect key="frame" x="0.0" y="44" width="334" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                            </textField>
                                        </subviews>
                                        <constraints>
...
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWB-0o-Xmk">
                                                <rect key="frame" x="0.0" y="0.0" width="254" height="38"/>
                                                <color key="backgroundColor" white="1" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" name="TamilSangamMN" family="Tamil Sangam MN" pointSize="23"/>
                                                <size key="titleShadowOffset" width="1" height="1"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cJ4-tA-WRt"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dgg-gY-bOL">
                                                <rect key="frame" x="0.0" y="58" width="254" height="38"/>
                                                <fontDescription key="fontDescription" name="TamilSangamMN" family="Tamil Sangam MN" pointSize="23"/>
                                                <size key="titleShadowOffset" width="1" height="1"/>
                                                <state key="normal" title="Register">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="registerTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mgp-Ge-n1E"/>
                                                </connections>
                                            </button>
...
                            <constraint firstItem="QGK-fD-IxI" firstAttribute="leading" secondItem="Cvq-Xu-01r" secondAttribute="leading" id="1Ho-aB-PYb"/>
                            <constraint firstItem="QGK-fD-IxI" firstAttribute="trailing" secondItem="Cvq-Xu-01r" secondAttribute="trailing" id="B81-zb-Yep"/>
                            <constraint firstAttribute="bottom" secondItem="QGK-fD-IxI" secondAttribute="bottom" id="Js6-zI-Ghr"/>
                            <constraint firstItem="QGK-fD-IxI" firstAttribute="top" secondItem="8Qu-SY-NPV" secondAttribute="top" id="oZM-JL-nod"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Tasks" id="0iW-ku-qu1">
                        <barButtonItem key="leftBarButtonItem" title="Sign out" id="F9b-YY-0ct">
                            <connections>
                                <action selector="signOutTapped:" destination="aN2-Dw-dPg" id="sRc-HD-zad"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="K56-kJ-M8U">
                            <connections>
...
